--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,10 +1,52 @@
-<input type="text" placeholder="Buscar amigo" [(ngModel)]="query" />
-<br />
-<b>Amigos</b>
-<ng-container *ngFor="let user of friends | search: query; let i = index">
-  <div>
-    <a routerLink="/conversation/{{ user.uuid }}"
-      >{{ i }}-{{ user.nick }} - {{ user.email }}</a
-    >
+<div id="homeContainer">
+  <div class="whiteBorderGlassBox">
+    <div class="homeHeadContainer">
+      <div class="row">
+        <div class="col-md-auto">
+          <div class="avatarFrameonline">
+            <img
+              src="assets/img/generic_avatar.png"
+              alt="avatar"
+              id="homeAvatarPicture"
+            />
+          </div>
+        </div>
+        <div class="col">
+          <b>Enzo</b>
+          <div class="">
+            <span>Online</span>
+            <br />
+            <span>< Escribe un mensaje personal ></span>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
-</ng-container>
+  <div class="whiteContinarPadded martop15">
+    <div class="row">
+      <div class="col">
+        <input
+          class="form-control"
+          type="text"
+          placeholder="Buscar amigo"
+          [(ngModel)]="query"
+        />
+      </div>
+      <div class="col-md-auto">
+        <img src="assets/img/logo_live_add.png" class="icon" />
+      </div>
+    </div>
+    <hr />
+    <b>Amigos ({{ friends.length }} / {{ friends.length }})</b>
+    <div
+      class="d-block mb-2"
+      *ngFor="let user of friends | search: query; let i = index"
+    >
+      <span routerLink="/conversation/{{ user.uuid }}">
+        <img src="assets/img/logo_live_online.png" class="icon" />
+        <b>{{ user.nick }}</b> - {{ user.subnick || "No subnick" }}
+        <small>{{ user.email }}</small>
+      </span>
+    </div>
+  </div>
+</div>
