--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,2 +1,9 @@
-<a routerLink="/home">home</a> | <a routerLink="/login">login</a> |
-<a routerLink="/profile">profile</a>
+<div id="menuContainer">
+  <div class="item branding" routerLink="/home">
+    <img id="main-logo" src="assets/img/logo_live.png" alt="logo msn" />
+    Messenger
+  </div>
+  <div class="item" routerLink="/profile">
+    Profile
+  </div>
+</div>
