--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,1 +1,7 @@
-<p>profile works!</p>
+<div id="profileContainer">
+  <div class="container patop45">
+    <div class="row">
+      <div class="col-md-3"></div>
+    </div>
+  </div>
+</div>
